@@ -1,6 +1,7 @@
 next
 	- Support re-entry into previously-unpacked archive directory
 	- Support direct entry into directory with archive-like name
+	- Fix minor no-recreate bug
 
 v2.0.2 (February 2017)
 	- Fix -c archive creation for 7z/zip/rar/ar
